--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,10 @@
                 "default": "Alt+P"
             }
         }
-    }
+    },
+    "options_ui": {
+        "page": "options.html",
+        "browser_style": true
+    },
+    "permissions": ["storage"]
 }
