--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,12 +9,12 @@
         }
     },
     "background": {
-        "scripts": ["background-script.js"]
+        "scripts": ["background/background.js"]
     },
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["content-script.js"]
+            "js": ["content/content.js"]
         }
     ],
     "icons": {
