--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
+    "watch": "onchange \"src/**/*.js\" \"src/**/*.html\" -- npm run build",
     "start": "web-ext run -s dist/",
-    "start-dev-edition": "web-ext run -s dist/ -f /usr/local/Caskroom/firefoxdeveloperedition/latest/FirefoxDeveloperEdition.app/Contents/MacOS/firefox-bin"
+    "dev": "concurrently --kill-others \"npm run watch\" \"npm run start\"",
+    "start-dev-edition": "web-ext run -s dist/ -f /usr/local/Caskroom/firefoxdeveloperedition/latest/FirefoxDeveloperEdition.app/Contents/MacOS/firefox-bin",
+    "dev-dev-edition": "concurrently --kill-others \"npm run watch\" \"npm run start-dev-edition\""
   },
   "devDependencies": {
     "babel-core": "6.20.0",
@@ -18,7 +21,9 @@
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-2": "6.18.0",
+    "concurrently": "^3.5.0",
     "copy-webpack-plugin": "^4.2.1",
+    "onchange": "^3.2.1",
     "web-ext": "^2.2.2",
     "webpack": "^3.8.1"
   }
