--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "author": "Fotis Koutoupas <fotis.koutoupas@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "watch": "onchange \"src/**/*.js\" \"src/**/*.html\" -- npm run build",
+    "webpack-build": "webpack",
+    "watch": "onchange \"src/**/*.js\" \"src/**/*.html\" -- npm run webpack-build",
     "start": "web-ext run -s dist/",
     "dev": "concurrently --kill-others \"npm run watch\" \"npm run start\"",
     "start-dev-edition": "web-ext run -s dist/ -f /usr/local/Caskroom/firefoxdeveloperedition/latest/FirefoxDeveloperEdition.app/Contents/MacOS/firefox-bin",
-    "dev-dev-edition": "concurrently --kill-others \"npm run watch\" \"npm run start-dev-edition\""
+    "dev-dev-edition": "concurrently --kill-others \"npm run watch\" \"npm run start-dev-edition\"",
+    "build-artifact": "web-ext build -s dist -a releases && node tools/renameArtifact.js"
   },
   "devDependencies": {
     "babel-core": "6.20.0",
