--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
     "name": "Pin Unpin Tab",
     "version": "3.4",
     "description": "Pin or unpin a tab through the toolbar icon, or a keyboard shortcut, or a left long-click anywhere on the page.",
+    "homepage_url": "https://github.com/jayesh-bhoot/pin-unpin-tab",
     "browser_action": {
         "default_icon": {
             "48": "icons/pin-dark.svg",
