--- a/manifest.json
+++ b/manifest.json
@@ -39,7 +39,7 @@
         "96": "icons/pin-dark.svg"
     },
     "commands": {
-        "toggle_pinned_status": {
+        "_execute_browser_action": {
             "description": "Default shortcut to toggle pinned status of the active tab",
             "suggested_key": {
                 "default": "Alt+P"
