--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["content-script.js"]
+            "js": ["long-click.js"]
         }
     ],
     "options_ui": {
