added gecko.id key in manifest.json to get rid of warnings during AMO upload process

--- a/manifest.json
+++ b/manifest.json
@@ -45,5 +45,10 @@
                 "default": "Alt+P"
             }
         }
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "pin-unpin-tab@bhoot.sh"
+        }
     }
 }
