Fix dune config to adhere to dune 3 conventions
With dune 3
- dune-project file is compulsory
- Not everything in the source tree is automatically copied over into
  _build context anymore. So, the HTML static assets have to copied by
  marking them as a dependency.

--- a/dune
+++ b/dune
@@ -3,3 +3,12 @@
  (modes js)
  (libraries js_of_ocaml js_of_ocaml-lwt promise_jsoo)
  (preprocess (pps lwt_ppx js_of_ocaml-ppx)))
+
+(alias
+  (name default)
+  (deps 
+    manifest.json 
+    preferences.html 
+    (source_tree icons)
+    (glob_files *.sh)
+    (glob_files *.md)))
