Fix build config
The default alias stanza (used in `dune build`) excluded the js
executables because of which the `executables` stanza wasn't being
executed in the first place. Only the static files were being copied.

--- a/dune
+++ b/dune
@@ -7,6 +7,9 @@
 (alias
   (name default)
   (deps 
+    bg.bc.js
+    long_click.bc.js
+    prefs.bc.js
     manifest.json 
     preferences.html 
     (source_tree icons)
