--- a/dune
+++ b/dune
@@ -2,16 +2,24 @@
  (names bg long_click prefs)
  (modes js)
  (libraries js_of_ocaml js_of_ocaml-lwt promise_jsoo ocaml-vdom)
- (preprocess (pps lwt_ppx js_of_ocaml-ppx)))
+ (preprocess
+  (pps lwt_ppx js_of_ocaml-ppx)))
+
+(rule
+ (alias default)
+ (deps ff_webext_api.mli)
+ (target ff_webext_api.ml)
+ (action
+  (run %{bin:gen_js_api} %{deps})))
 
 (alias
-  (name default)
-  (deps 
-    bg.bc.js
-    long_click.bc.js
-    prefs.bc.js
-    manifest.json 
-    preferences.html 
-    (source_tree icons)
-    (glob_files *.sh)
-    (glob_files *.md)))
+ (name default)
+ (deps
+  bg.bc.js
+  long_click.bc.js
+  prefs.bc.js
+  manifest.json
+  preferences.html
+  (source_tree icons)
+  (glob_files *.sh)
+  (glob_files *.md)))
