--- a/bsconfig.json
+++ b/bsconfig.json
@@ -6,7 +6,8 @@
       "dir" : "."
     },
     "package-specs": {
-      "module": "commonjs"
+      "module": "es6",
+      "in-source": true
     },
     "suffix": ".bs.js",
     "bs-dependencies": [
