--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "build": "mel build && esbuild bg.bs.js --bundle --outfile=bg.prod.js && esbuild long_click.bs.js --bundle --outfile=long_click.prod.js && esbuild prefs.bs.js --bundle --outfile=prefs.prod.js",
     "start": "ls *.ml | entr -csr 'yarn build'",
-    "test": "yarn build && web-ext run --browser-console --url 'https://jayeshbhoot.com' --reload"
+    "test": "yarn build && web-ext run --browser-console --url 'https://jayeshbhoot.com' --reload",
+    "build:ext": "yarn build && web-ext build --ignore-files='*.ml' '*.sh' '*.md' dune dune-project '*.zip' '*.bs.js' flake.nix flake.lock yarn.lock dune.mel _build",
+    "build:src-zip": "zip -r src-pkg.zip.tmp *.md *.bs.js manifest.json *.html package.json && rm -rf src-pkg.zip && mv src-pkg.zip.tmp src-pkg.zip"
   }
 }
