--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "bucklescript-tea": "^0.15.0",
-    "esbuild": "^0.16.9",
     "reason-promise": "^1.1.5"
   },
   "scripts": {
@@ -17,5 +16,9 @@
     "test": "yarn build && web-ext run --browser-console --url 'https://jayeshbhoot.com' --reload",
     "build:ext": "yarn build && web-ext build --ignore-files='*.ml' '*.sh' '*.md' dune dune-project '*.zip' '*.bs.js' flake.nix flake.lock yarn.lock dune.mel _build",
     "build:src-zip": "zip -r src-pkg.zip.tmp *.md *.bs.js manifest.json *.html package.json && rm -rf src-pkg.zip && mv src-pkg.zip.tmp src-pkg.zip"
+  },
+  "devDependencies": {
+    "esbuild": "^0.16.9",
+    "web-ext": "^7.4.0"
   }
 }
