Switch to melange v1
... from melange unstable.
Melange v1 integrates fully with dune.
So there is no need for bsconfig.json anymore.

--- a/dune
+++ b/dune
@@ -1,5 +1,32 @@
-;;;;{BSB GENERATED: NO EDIT
+;; we start by ignoring node_modules. if you need to consume an OCaml 
+;; project from `node_modules`, this should work:
+;; - remove the `dirs` stanza below
+;; - add a `(subdir node_modules (dirs only_your_package))`
+; (dirs :standard \ node_modules)
 
-(include dune.mel)
-
-;;;;BSB GENERATED: NO EDIT}
+(subdir
+ node_modules
+ (vendored_dirs bucklescript-tea reason-promise)
+ (dirs bucklescript-tea reason-promise)
+ (subdir
+  bucklescript-tea
+  (subdir
+   src-ocaml
+   (library
+    (name bucklescript_tea)
+    (wrapped false)
+    (modes melange)
+    (preprocess
+     (pps melange.ppx)))))
+ (subdir
+  reason-promise
+  (subdir
+   src
+   (subdir
+    js
+    (library
+     (name reason_promise)
+     (wrapped false)
+     (modes melange)
+     (preprocess
+      (pps melange.ppx)))))))
