--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "author": "Jayesh Bhoot",
   "license": "MIT",
   "dependencies": {
-    "bucklescript-tea": "^0.15.0",
-    "reason-promise": "^1.1.5"
+    "reason-promise": "^1.1.5",
+    "rxjs": "^7.8.1"
   },
   "scripts": {
-    "build": "dune build @melange && cd ./_build/default/src/output && esbuild src/bg.js --bundle --outfile=src/bg.prod.js && esbuild src/long_click.js --bundle --outfile=src/long_click.prod.js && esbuild src/prefs.js --bundle --outfile=src/prefs.prod.js && cp ~/projects/pin-unpin-tab/manifest.json ./ && cp -r ~/projects/pin-unpin-tab/src/icons ./src/ && cp -r ~/projects/pin-unpin-tab/src/preferences.html ./src/ && cp ~/projects/pin-unpin-tab/src/style.css ./src/",
-    "test": "npm run build && cd ./_build/default/src/output && web-ext run --browser-console --url 'https://jayeshbhoot.com' --reload",
+    "build": "dune build @melange && cd ./_build/default/src/output && cp ~/projects/pin-unpin-tab/manifest.json ./ && cp -r ~/projects/pin-unpin-tab/src/icons ./src/ && cp -r ~/projects/pin-unpin-tab/src/preferences.html ./src/ && cp ~/projects/pin-unpin-tab/src/style.css ./src/ && cp ~/projects/pin-unpin-tab/src/prefs.js ./src/ && esbuild src/bg.js --bundle --outfile=src/bg.prod.js && esbuild src/long_click.js --bundle --outfile=src/long_click.prod.js && esbuild src/prefs.js --bundle --outfile=src/prefs.prod.js",
+    "test": "npm run build && cd ./_build/default/src/output && web-ext run --browser-console --url 'https://bhoot.sh' --reload",
     "build:outdated": "mel build && esbuild src/bg.bs.js --bundle --outfile=src/bg.prod.js && esbuild src/long_click.bs.js --bundle --outfile=src/long_click.prod.js && esbuild src/prefs.bs.js --bundle --outfile=src/prefs.prod.js",
     "@comment: alternative find command which traverses everything unnecessarily": "find . -path './src/*' -not -name '*.bs.js' -not -name '*.prod.js' -o -path './bsconfig.json' -o -path './manifest.json'",
     "@comment:dev": "double backslashes are needed escape the backslash itself to satisfy json parsing. bash should need only a single backslash, to escape the parentheses.",
