--- a/pin-unpin-tab.opam
+++ b/pin-unpin-tab.opam
@@ -8,7 +8,8 @@ authors: ["Jayesh Bhoot"]
 homepage: "https://github.com/jyshb/pin-unpin-tab"
 bug-reports: "https://github.com/jyshb/pin-unpin-tab/issues"
 depends: [
-  "dune" {>= "3.8"}
+  "dune" {>= "3.16"}
+  "ocaml" {= "5.1.0"}
   "melange" {= "1.0.0"}
   "reason"
   "utop"
