--- a/pin-unpin-tab.opam
+++ b/pin-unpin-tab.opam
@@ -9,8 +9,8 @@ homepage: "https://github.com/jyshb/pin-unpin-tab"
 bug-reports: "https://github.com/jyshb/pin-unpin-tab/issues"
 depends: [
   "dune" {>= "3.16"}
-  "ocaml" {>= "5.1.0"}
-  "melange" {>= "5.0.0"}
+  "ocaml" {= "5.3.0"}
+  "melange" {= "5.1.0-53"}
   "reason"
   "utop"
   "odoc" {with-doc}
